--- a/config/database.yml
+++ b/config/database.yml
@@ -61,6 +61,7 @@ test:
 #
 production:
   <<: *default
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   database: hopify_production
   username: hopify
   password: <%= ENV["HOPIFY_DATABASE_PASSWORD"] %>
